logo does not collapse on click. will fix soon

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,7 +41,7 @@ footer {
 
 .logo {
   max-width: 80%;
-  width: 15em;
+  width: 10em;
 }
 
 .full-width-img {
